2008-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Remove assertion check on
	scanline size since it has not caught anything.
	* magick/image.c (SetImageInfo): Ensure that the file extension
	does not trigger unwanted activity such as access to an X11
	server, printer, or the launch delegate.
	* config/Makefile.am (configshare_DATA): Install colors.mgk in
	share path.
	* magick/blob.c (GetConfigureBlob): Search 'share' config path
	prior to 'lib' config path.

2008-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): TrueColor RGB was usually
	written rather than the desired more compact format.  This is a
	first pass at fixing that.

2008-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* BENCHMARKS.txt: Added a benchmark summary.

2008-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Prepare 1.2beta1 release.
	* NEWS.txt: Updated with latest news.

2008-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Update to 1.2965 2008-04-22
	* coders/png.c (ReadOneJNGImage): Deal with ReadImage() returning
	a NULL pointer when reading JPEG sub-image.

2008-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/channel.c (ExportImageChannel): Added progress monitor
	support.
	(SetImageChannelDepth): Added progress monitor support.
	(ChannelImage): Don't preserve matte channel when extracting
	channel.
	* magick/image.c (SetImageOpacity): Avoid integer overflow in Q32
	build.  Added progress monitor support.
	(SyncImage): Added progress monitor support.
	(SetImage): Added progress monitor support.
	(CycleColormapImage): Added progress monitor support.
	(GetImageBoundingBox): Added progress monitor support.
	(SortColormapByIntensity): Added progress monitor support.

2008-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac, magick/Makefile.am: Don't use libtdl unless we are
	supposed to be using it!